--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,27 +2,34 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>YU Computer Science</h1>
+    <p class="lead">Semester long Hackathon!</p>
+    <i class="fa fa-laptop fa-4x"></i>
   </div>
 </header>
 
 <div class="container">
+
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+      <h2 class="page-header">Features:</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4" ng-repeat="feature in features">
+          <div class="thumbnail">
+            <i class="fa" ng-class="feature.icon"></i>
+            <div class="caption">
+              <h3>{{feature.name}}</h3>
+              <p>{{feature.info}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <div class="signup--button">
+    <a href="/signup" class="btn btn-success btn-lg btn-block">Signup Now!</a>
+  </div>
+
 </div>
 
-<footer class="footer">
-  <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-  </div>
-</footer>
