--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,12 +4,14 @@
   <div class="container">
     <h1>YU Computer Science</h1>
     <p class="lead">Semester long Hackathon!</p>
-    <i class="fa fa-laptop fa-4x"></i>
+      <div class="signup--button" ng-hide="isLoggedIn()">
+          <a href="/signup" class="btn btn-success btn-lg">Signup Now!</a>
+      </div>
+
   </div>
 </header>
 
 <div class="container">
-
   <div class="row">
     <div class="col-lg-12">
       <h2 class="page-header">Features:</h2>
@@ -26,10 +28,5 @@
       </div>
     </div>
   </div>
-
-  <div class="signup--button">
-    <a href="/signup" class="btn btn-success btn-lg btn-block">Signup Now!</a>
-  </div>
-
 </div>
 
