--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -77,12 +77,10 @@
 
                 </div>
 
-                <div>
-                    <button class="btn btn-inverse btn-lg btn-login" type="submit">
+                    <button class="btn btn-info btn-lg btn-login" type="submit">
                         Sign up
                     </button>
-                    <a href="/login"> Or you can login</a>
-                </div>
+                <a href="/login"> Or you can login</a>
 
 
                 <hr>
