--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,10 +2,10 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>YU Computer Science</h1>
-    <p class="lead">Semester long Hackathon!</p>
+    <h1>Semester long Project</h1>
+    <p class="lead">Work on something cool with a small team of students!</p>
       <div class="signup--button" ng-hide="isLoggedIn()">
-          <a href="/signup" class="btn btn-success btn-lg">Signup Now!</a>
+          <a href="/signup" class="btn btn-success btn-lg">Sign up now if you're interested!</a>
       </div>
 
   </div>
