--- a/client/app/admin/projects/admin-projects.html
+++ b/client/app/admin/projects/admin-projects.html
@@ -16,14 +16,14 @@
             <div ng-if="!projects.length">No projects available</div>
             <div class="well" ng-repeat="project in projects">
                 <div class="row user-row" ng-click="isCollapsed = !isCollapsed">
-                    <div class="col-md-1">
+                    <div class="col-xs-1">
                         <i class="fa fa-cog fa-2x"></i>
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-xs-10">
                         <strong>{{project.name}}</strong><br>
                         <span class="text-muted">{{project.description}}</span>
                     </div>
-                    <div class="col-md-1 dropdown-user">
+                    <div class="col-xs-1 dropdown-user">
                         <i class="fa text-muted"
                            ng-class="{'fa-chevron-down': !isCollapsed, 'fa-chevron-up': isCollapsed}"></i>
                     </div>
