--- a/client/app/projects/all/all-projects.html
+++ b/client/app/projects/all/all-projects.html
@@ -1,34 +1,45 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-<div class="container">
-    <h2>Available Projects</h2>
 
-    <div ng-if="!projects.length">No projects available</div>
+<div class="container all-projects">
+    <div class="well">
+      <h1 class="text-center">Available Projects</h1>
 
-    <ul class="list-group">
-        <li class="list-group-item" ng-repeat="project in projects">
-            <div class="media">
-                <i class="media-object fa fa-cog fa-4x pull-left"></i>
+      <div ng-if="!projects.length">No projects available</div>
+      <div class="list-group">
+        <div class="list-group-item" ng-repeat="project in projects">
+          <div class="row">
+          <div class="media col-md-3">
+            <figure class="pull-left">
+              <i class="media-object img-rounded img-responsive fa fa-cog project-icon"></i>
+            </figure>
+          </div>
+          <div class="col-md-6">
+            <a href ng-href="/projects/{{project._id}}"><h4 class="list-group-item-heading"> {{project.name}}</h4></a>
 
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        <a href="javascript:;"
-                           ng-href="/projects/{{project._id}}"
-                           class="project--name">
-                            {{project.name}}
-                        </a>
-                    </h4>
+            <p class="list-group-item-text">
+              {{project.description}}
 
-                    <div class="text-muted">Created by {{project.author.name}}</div>
-                    {{project.description}}
+            <ul class="nav nav-pills">
+              <li ng-repeat="lang in project.languages">
+                <span class="label label-default">{{lang}}</span>
+              </li>
+            </ul>
+            </p>
+            <br>
+            <a type="button" class="btn btn-primary" ng-href="/projects/{{project._id}}">View Project</a>
+          </div>
+          <div class="col-md-3 text-center">
+            <h2> {{project.votes || 0}} votes </h2>
 
-
-                    <ul class="nav nav-pills">
-                        <li ng-repeat="lang in project.languages">
-                            <span class="label label-default">{{lang}}</span>
-                        </li>
-                    </ul>
-                </div>
+            <div class="row">
+              <button type="button" class="btn btn-sm btn-success" ng-click="voteUp(project)"
+                      tooltip="Vote positively for the project" tooltip-placement="bottom"><i class="fa fa-thumbs-up"></i></button>
+              <button type="button" class="btn btn-sm btn-danger" ng-click="voteDown(project)"
+                      tooltip="Vote negatively for the project" tooltip-placement="bottom"><i class="fa fa-thumbs-down"></i></button>
             </div>
-        </li>
-    </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
