--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -12,7 +12,12 @@
             </ul>
         </div>
         <div class="col-md-9 well">
-            Vertical admin menu
+          There are:
+          <ul class="list-group">
+            <li class="list-group-item">{{projects.length}} Projects</li>
+            <li class="list-group-item">{{users.length}} Users</li>
+          </ul>
+
         </div>
     </div>
 </div>
