Fixed main button on mobile

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,7 +5,8 @@
     <h1>Semester long Project</h1>
     <p class="lead">Work on something cool with a small team of students!</p>
       <div class="signup--button" ng-hide="isLoggedIn()">
-          <a href="/signup" class="btn btn-success btn-lg">Sign up now if you're interested!</a>
+          <a href="/signup" class="btn btn-success btn-lg">
+            <span class="signup-hero-button">Sign up now if you're interested!</span></a>
       </div>
 
   </div>
