Clear form and log after comment

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -72,7 +72,7 @@
                            password-match="user.password"/>
 
                     <p class="help-block" ng-show="form.verify_password.$error.passwordMatch">
-                        Passwords are not equal!
+                      Passwords don't match
                     </p>
 
                 </div>
