--- a/client/app/projects/single/single.html
+++ b/client/app/projects/single/single.html
@@ -21,7 +21,7 @@
 
 
         <ul class="list-group row center-block list-unstyled">
-          <li><i class="fa fa-users"></i> Project members:</li>
+          <li><i class="fa fa-users"></i> Project contributors:</li>
           <li class="list-group-item col-xs-2" ng-repeat="member in project.members">
             <i class="fa fa-user"></i>
             {{member.name}}
